@@ -17,6 +17,7 @@ Version [b]2016.2.10[/b]:
 -Game path can be read from registry.
 -Pressing control + 1...4 changes focus between editors.
 -Civilization resource names are customizable via text file.
+-Added a button to sync save paths with open paths.
 
 Version [b]2016.1.24[/b]:
 -New lines handled properly when editing language DLL files.
